AOC21: Add initial solution to day 24